# Trezo-Ai

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  README.md  brand.md  codex-session.jsonl  package.json  pnpm-lock.yaml  render.yaml  rust-toolchain.toml  superteam-agentic-engineering-grant-draft.md  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/backend/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/backend/src/: config.ts  index.ts
apps/backend/tests/: setup.ts
apps/frontend/: .env.example  next.config.js  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx  provider.tsx  theme-provider.tsx
apps/frontend/components/: collectiveBrain.tsx  cta.tsx  flowState.tsx  footer.tsx  her.tsx  hero.tsx  navBar.tsx  social.tsx  themeToggle.tsx  walletAdapter.tsx  walletAuthButton.tsx
apps/frontend/lib/: mockData.ts  supabase-admin.ts  supabaseAdmin.ts  wallet.ts
programs/koshai-core/: Cargo.toml
programs/trezo-core/: Cargo.toml
programs/trezo-core/src/: error.rs  lib.rs
programs/trezo-core/src/instructions/: department.rs  mod.rs  oracle.rs  privacy.rs  proposal.rs  spending_rule.rs  treasury.rs  yield_mgmt.rs
programs/trezo-core/src/state/: agent.rs  audit_log.rs  department.rs  mod.rs  oracle.rs  proposal.rs  spending_rule.rs  treasury.rs  viewing_key.rs  yield_position.rs
programs/trezo-hook/: Cargo.toml
programs/trezo-hook/src/: lib.rs
programs/trezo-hook/src/instructions/: execute.rs  initialize.rs  mod.rs
scripts/: init-treasury.ts  seed.ts  sync-idl.sh
tests/e2e/: core.test.ts  hook.test.ts
(+161 files in other folders)
