[package]
name = "trezo-core"
version = "0.1.0"
description = "trezo AI core treasury automation program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treo_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
