[package]
name = "trezo-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trezo_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
trezo-core = { path = "../trezo-core", features = ["cpi"] }   
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
sha2 = { version = "0.10", features = ["default"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
